# documind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Implementation_v2.md  NEW.txt  README.md  dual_layer_injector.py  environment.yml  eval_pdf_qa.json  pdf_overlay_dual_layer.py  prompt.md  pyproject.toml
agent-backend/: API_KEY_QUICK_SETUP.txt  requirements.lock.txt  requirements.txt  run_on_pdf.py  run_pdf.sh
agent-backend/src/: api_server.py  multi_agent_orchestrator.py  perception.py
apps/web/: __init__.py  main.py
configs/: README.md
configs/stage5/: demo_batch.json  scenario_specs.json  severity_weights.json
core/: __init__.py
core/agent-backend/: README.md  SECURE_API_KEY_SETUP.md  run_on_pdf.py  run_pdf.sh
core/demo/: __init__.py  agent_backend_eval.py  logging_utils.py  service.py
core/extract/: __init__.py  base.py  docling_extractor.py  mistral_extractor.py  models.py  pymupdf_extractor.py  tesseract_extractor.py
core/reconstruct/: __init__.py  latex_builder.py
core/stage2/: __init__.py  openai_analyzer.py  promptqa.py  prompts.py  schemas.py
core/stage3/: __init__.py  openai_planner.py  prompts.py  schemas.py
core/stage4/: __init__.py  executor.py  font_remap.py  image_injector.py  injector.py  overlay.py  schemas.py  (+3 more)
docs/: OUTPUT_FORMATS.md  README.md  STAGE5_UI_DEMO_SPEC.md  UI_BACKEND_INTEGRATION.md  index.html
pipeline/: __init__.py  cli.py  graph.py
tests/: test_stage3_openai_planner.py  test_stage4_strategy_mapping.py  test_stage5_agent_runner.py  test_stage5_configs.py  test_stage5_evaluator.py
(+182 files in other folders)
