[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "documind"
version = "0.1.0"
description = "PDF parsing pipeline: byte-extraction, OCR, VLM (LangGraph)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "pymupdf>=1.24",
    "pytesseract>=0.3",
    "docling[vlm]>=2.0",
    "mistralai>=1.0",
    "openai>=1.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
documind = "pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "pipeline*"]
