[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maldoc"
version = "0.1.0"
description = "PDF parsing pipeline: byte-extraction, OCR, VLM (LangGraph)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "pymupdf>=1.24",
    "pytesseract>=0.3",
    "docling[vlm]>=2.0",
    "mistralai>=1.0",
    "openai>=1.0",
    "typer>=0.12",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pypdf>=5.0",
    "keyring>=24.0",
]

[project.scripts]
maldoc = "pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "pipeline*"]
